--- a/index.html
+++ b/index.html
@@ -19,14 +19,25 @@
         }
 
         .container {
-            max-width: 700px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
-        }
+    max-width: 100%;
+    width: 100%;
+    min-height: 400px;
+    max-height: 600px;
+    margin: 0 auto;
+    background: white;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
+}
 
+@media (max-width: 768px) {
+    .container { 
+        padding: 15px; 
+    }
+    .question-card { 
+        padding: 15px; 
+    }
+}
         .header {
             text-align: center;
             margin-bottom: 40px;
